--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,7 @@
 {
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
-
   "dependencies": {
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
@@ -10,5 +9,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.2"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
