--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "cd ../bank-client && npm install --only=dev && npm install && npm run build"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
