--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "start": "node server.js",
-    "heroku-postbuild": "cd models && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "cd .. && npm install --only=dev && npm install && npm run build"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
